--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@
 
                         <div class="item">
                             <div class="contact-details-title">
-                                <h5>Factory</h5>   
+                                <h5>Bicholim Factory</h5>   
                             </div>
                             <ul class="contact-info">
                                 <li>
