--- a/locations.html
+++ b/locations.html
@@ -129,7 +129,7 @@
                         <div class="text-holder">
                             <a href="news-single.html">
                                 <h2 class="blog-title">
-                                    Crystal Industries India Pvt Ltd - Miramar 
+                                    Crystal Industries - Miramar (Store)
                                 </h2>
                             </a>
                             <ul class="meta-info">
@@ -201,7 +201,7 @@
                         <div class="text-holder">
                             <a href="news-single.html">
                                 <h2 class="blog-title">
-                                    Crystal Industries India Pvt Ltd - Mapusa 
+                                    Crystal Industries - Mapusa (Store)
                                 </h2>
                             </a>
                             <ul class="meta-info">
@@ -273,7 +273,7 @@
                         <div class="text-holder">
                             <a href="news-single.html">
                                 <h2 class="blog-title">
-                                    Crystal Industries India Pvt Ltd - Panjim Office 
+                                    Crystal Industries - Panjim (Office)
                                 </h2>
                             </a>
                             <ul class="meta-info">
@@ -346,7 +346,7 @@
                         <div class="text-holder">
                             <a href="news-single.html">
                                 <h2 class="blog-title">
-                                    Crystal Industries - Bicholim 
+                                    Crystal Industries - Bicholim (Factory)
                                 </h2>
                             </a>
                             <ul class="meta-info">
