--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <h5>Managing Director</h5>
                         <h3>Jayant Kamat</h3>
                         <ul>
-                            <li><span>Tel:</span>9822100909</li>
+                            <li><span>Tel:</span>+91 98221 00909</li>
                             <li><span>Mail:</span>Jayant@crystalmetals.com</li>
                         </ul>    
                     </div>    
@@ -414,7 +414,7 @@
                         <h5>General Manager - Production</h5>
                         <h3>Rajendra Kamat</h3>
                         <ul>
-                            <li><span>Tel:</span>7888031965</li>
+                            <li><span>Tel:</span>+91 78880 31965</li>
                             <li><span>Mail:</span>Rajendra@crytalmetals.com</li>
                         </ul>    
                     </div>    
@@ -425,15 +425,15 @@
             <div class="col-md-4 col-sm-12 col-xs-12">
                 <div class="single-team-member">
                     <div class="img-holder">
-                        <img src="img/team/3.jpg" alt="Awesome Image">
+                        <img src="img/team/4.jpg" alt="Awesome Image">
                         
                     </div>
                     <div class="text-holder">
-                        <h5>General Manager - Sales</h5>
-                        <h3>Vikram Kamat</h3>
+                        <h5>General Manager</h5>
+                        <h3>Sahil Kamat</h3>
                         <ul>
-                            <li><span>Tel:</span>9822109496</li>
-                            <li><span>Mail:</span>Vikram@crystalmetals.com</li>
+                            <li><span>Tel:</span>+91 8975765190</li>
+                            <li><span>Mail:</span>sahil@crystalmetals.com</li>
                         </ul>    
                     </div>    
                 </div>
