--- a/anodising.html
+++ b/anodising.html
@@ -324,7 +324,7 @@
                                 <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>    
                             </div>
                             <div class="content-holder">
-                                <p><span>Call Us:</span> +91 7888031965 Crystalgoa@gmail.com</p>    
+                                <p><span>Call Us:</span> +91 78880 31965 sahil@crystalmetals.com rajendra@crystalmetals.com</p>    
                             </div>
                         </li>
                         <li>
