--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,8 @@
                                     <ul>
                                         <li><a href="anodising.html">Anodising</a></li>
                                         <li ><a href="powder-coating.html">Powder Coating</a></li>
+                                        <li ><a href="sliding-doors-windows.html">Sliding Doors & Windows</a></li>
                                         <li ><a href="solar-module-frame.html">Solar Module Frame</a></li>
-                                        <li class="current"><a href="sliding-doors-windows.html">Sliding Doors & Windows</a></li>
-
                                     </ul>
                                 </li>
                                 <li ><a href="certifications.html">Certifications</a></li>
