--- a/contact.html
+++ b/contact.html
@@ -139,81 +139,6 @@
                             </ul>                   
                         </div>
 
-
-
-
-                        <div class="item">
-                            <div class="contact-details-title">
-                                <h5>Mapusa Store</h5>   
-                            </div>
-                            <ul class="contact-info">
-                                <li>
-                                    <div class="icon-box">
-                                        <span class="flaticon-signs"></span>
-                                    </div>
-                                    <div class="text-box">
-                                        <p><span>Address:</span> Shop No. B-3/4, Saldanha Business Tower, Duler-Marna-Siolim Rd, Opp. St. Mary School, Mapusa, Goa 403507</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon-box">
-                                        <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
-                                    </div>
-                                    <div class="text-box">
-                                        <p><span>Call Us:</span>+91 08322250627</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon-box">
-                                        <span class="flaticon-clock-1"></span>
-                                    </div>
-                                    <div class="text-box">
-                                        <p><span>Mon - Sat:</span>9AM-1PM <br/>2:30PM-630PM<br> 
-                                        <span>Sunday:</span>Closed</p>
-                                    </div>
-                                </li>
-                                
-                            </ul>                   
-                        </div>
-
-                         <div class="item">
-                            <div class="contact-details-title">
-                                <h5>Panjim Office</h5>   
-                            </div>
-                            <ul class="contact-info">
-                                <li>
-                                    <div class="icon-box">
-                                        <span class="flaticon-signs"></span>
-                                    </div>
-                                    <div class="text-box">
-                                        <p><span>Address:</span>101, Rayu Chambers, Dr. AB Road, Panjim, Goa - India</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon-box">
-                                        <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
-                                    </div>
-                                    <div class="text-box">
-                                        <p><span>Call Us:</span>+91 08322223053</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon-box">
-                                        <span class="flaticon-clock-1"></span>
-                                    </div>
-                                    <div class="text-box">
-                                        <p><span>Mon - Sat:</span>9AM-5PM<br> 
-                                        <span>Sunday:</span>Closed</p>
-                                    </div>
-                                </li>
-                                
-                            </ul>                   
-                        </div>
-
-
-
-
-
                         <div class="item">
                             <div class="contact-details-title">
                                 <h5>Bicholim Factory</h5>   
@@ -232,7 +157,7 @@
                                         <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
                                     </div>
                                     <div class="text-box">
-                                        <p><span>Call Us:</span>+91 7888031965 Crystalgoa@gmail.com</p>
+                                        <p><span>Call Us:</span>+91 78880 31965 rajendra@crystalmetals.com</p>
                                     </div>
                                 </li>
                                 <li>
