--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                       
                     </div>
                     <div class="text-holder">
-                        <h5>General Manager - Production</h5>
+                        <h5>General Manager</h5>
                         <h3>Rajendra Kamat</h3>
                         <ul>
                             <li><span>Tel:</span>+91 78880 31965</li>
@@ -432,7 +432,7 @@
                         <h3>Sahil Kamat</h3>
                         <ul>
                             <li><span>Tel:</span>+91 8975765190</li>
-                            <li><span>Mail:</span>sahil@crystalmetals.com</li>
+                            <li><span>Mail:</span>Sahil@crystalmetals.com</li>
                         </ul>    
                     </div>    
                 </div>
