--- a/locations.html
+++ b/locations.html
@@ -111,17 +111,10 @@
                         <div class="img-holder">
                           <!--Start Google map area-->
                             <section class="google-map-area">
-                                <div 
-                                    class="google-map" 
-                                    id="location-google-map1" 
-                                    data-map-lat="15.479908" 
-                                    data-map-lng="73.814224" 
-                                    data-icon-path="img/resources/online-store.png"
-                                    data-map-title="Goa India"
-                                    data-map-zoom="16"
-                                    data-markers='{
-                                        "marker-3": [15.479908, 73.814224, "<h5>Miramar Store</h5>"]
-                                    }'>
+                                <div class="img-holder">
+                                    <a href="https://www.google.co.in/maps/dir/''/Shop+No.+6+%26+7,+Crystal+Metals+India+Pvt.+Ltd.,+Siddharth+Apartment,+Opposite+Raikar+Nursing+Home,+Tonca,+Miramar,+Panjim,+Goa+403001/data=!4m5!4m4!1m0!1m2!1m1!1s0x3bbfc0c1c108d141:0x282384fde9dbb0ce?sa=X&ved=0ahUKEwizt569jbTVAhXLrY8KHUgFBMgQiBMITzAA">
+                                        <img alt="Qries" src="img/shop/miramar_store.jpg">
+                                    </a>
                                 </div>
                             </section>
                             <!--End Google map area-->
@@ -183,17 +176,11 @@
                         <div class="img-holder">
                           <!--Start Google map area-->
                             <section class="google-map-area">
-                                <div 
-                                    class="google-map" 
-                                    id="location-google-map3" 
-                                    data-map-lat="15.581594" 
-                                    data-map-lng="73.953491" 
-                                    data-icon-path="img/resources/industrial-park.png"
-                                    data-map-title="Goa India"
-                                    data-map-zoom="16"
-                                    data-markers='{
-                                        "marker-3": [15.581594, 73.953491, "<h5>Bicholim Factory</h5>"]
-                                    }'>
+                                <div class="img-holder">
+
+                                    <a href="https://www.google.co.in/maps/dir/''/Crystal+Industries,+Plot+No+D%2F3%2F18,+Bicholim+Industrial+Esate,+Bicholim,+Bicholim,+Goa,+403504/data=!4m5!4m4!1m0!1m2!1m1!1s0x3bbf967a732630b1:0x7576e24265896fb6?sa=X&ved=0ahUKEwjV1azljbTVAhUMKo8KHegVDlcQiBMILTAA">
+                                        <img alt="Qries" src="img/shop/bicholim_factory.jpg">
+                                    </a>
                                 </div>
                             </section>
                             <!--End Google map area-->
