--- a/certifications.html
+++ b/certifications.html
@@ -104,8 +104,8 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-project">
                     <div class="img-holder">
-                           <a href="img/project/project-v1-1-FULL.jpg">
-                         <img style=" display:block; margin:auto;" src="img/project/project-v1-1.jpg" alt="Awesome Image">
+                           <a href="img/project/new-cert.jpeg">
+                         <img  style=" display:block; margin:auto;" src="img/project/new-cert-small.jpg" alt="Awesome Image">
                         <div class="caption">
                           <p style="overflow: auto;  text-align: center;">Certification from <br/>the 'International Certification Services Pvt. Ltd'<br/>ISO 9001:2015</p>
                         </div>
@@ -272,7 +272,7 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2017 Crystal Industries</p>
+                    <p>Copyright © 2020 Crystal Industries</p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
