--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </div>
         <div class="row">
             <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/solution/anodising.jpg" alt="Awesome Image">
@@ -243,7 +243,7 @@
             </div>
             <!--End single service item-->
             <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/solution/powder.jpg" alt="Awesome Image">
@@ -271,7 +271,36 @@
             <!--End single service item-->  
 
              <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-3 col-sm-3 col-xs-12">
+                <div class="single-service-item">
+                    <div class="img-holder">
+                        <img src="img/solution/sliding-doors-windows.jpg" alt="Awesome Image">
+                        <div class="overlay">
+                            <div class="box">
+                                <div class="content">
+                                    <a class="thm-btn yellow-bg" href="sliding-doors-windows.html">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-holder">
+                        <div class="icon">
+                            <span>
+                                <img src="img/resources/window.png"></img>
+                            </span>    
+                        </div>
+                        <div class="text">
+                            <h3>Sliding Doors & Windows</h3>
+                            <p>Providing custom-sized sliding panels to enhace the look of the doors and windows.</p>
+                        </div>
+                    </div>    
+                </div>
+            </div>
+            <!--End single service item--> 
+
+
+                           <!--Start single service item-->
+            <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/solution/solar-module-frame.jpg" alt="Awesome Image">
@@ -285,18 +314,17 @@
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span>
+                             <span>
                                 <img src="img/resources/window.png"></img>
-                            </span>    
+                            </span> 
                         </div>
                         <div class="text">
                             <h3>Solar Module Frame</h3>
-                            <p>Providing solar module frames.</p>
+                            <p>Providing Premium Quality Anodised Solar Module Frames to various Customers throughout India.</p>
                         </div>
                     </div>    
                 </div>
             </div>
-            <!--End single service item--> 
 
            
         </div>
@@ -667,7 +695,7 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2017 Crystal Industries</p>
+                    <p>Copyright © 2020 Crystal Industries</p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
