--- a/solar-module-frame.html
+++ b/solar-module-frame.html
@@ -111,7 +111,7 @@
                         <div class="top">
                             <div class="col-md-5">
                                 <div class="img-holder">
-                                    <img src="img/solution-single/solution-v4-1.jpg" alt="Awesome Image">    
+                                    <img src="img/solution-single/solution-v4-5.jpg" alt="Awesome Image">    
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -121,12 +121,10 @@
                                         <span class="border"></span>
                                     </div>
 
-                                    <p>Extend your home’s ambience into the great outdoors with sliding doors. Our selection of sliding doors visually expand and brighten any room and the glass area means added light, so every season is more enjoyable. Our sliding doors allow you to spend more time enjoying the view and less time on maintenance. These doors never need painting and cleaning is simple; your favorite household cleaners and a damp cloth will make glass and vinyl surfaces sparkle like new.</p>
+                                   <p>Crystal Industries is slowly and steadily reaching new heights in the Solar Module Fabrication. We are currently supplying Premium Quality Anodised Solar Module Frames to various Customers throughout India as well as have developed and proposed various designs and improvements to International Clients.</p>
 
-                                    <p>As for ease of operation and durability, you’ll find no better sliding door options. Our heavy-duty fiberglass screening is tough; aluminum frames ensures the outer screen door stands up to the test of time. Special anodized tracks at the sill resist corrosion to help keep door panels gliding smoothly for years to come.</p>
-
+                                    <p>The prime factor which helps make Crystal Solar Module Frames stand out from the crowd is the impeccable Anodising finish provided to the Extrusions – which exactly matches the Imported Frames modules from Other countries such as China.</p>
                                    
-
                                 </div>    
                             </div>
                         </div>
@@ -135,7 +133,7 @@
                         <div class="bottom">
                             <div class="col-md-5">
                                 <div class="img-holder">
-                                    <img src="img/solution-single/solution-v4-2.jpg" alt="Awesome Image">
+                                    <img src="img/solution-single/solution-v4-6.jpeg" alt="Awesome Image">
                                 </div>
                             </div>
                             <br/>
@@ -143,14 +141,9 @@
 
                              <div class="text-holder">
 
+                                    <p>We have procured all the State-Of-The-Art Machinery for the complete Pre-Anodising, Anodising and Post-Anodising Requirements, which helps us in producing 1750 Solar Frame Module Sets per day, while ensuring High-Quality Best In Class Finish to each and every frame module.
 
-                                    <p>Horizontal Slider windows open with the sash sliding left or right. Some people find sliding windows easier and faster to open than crank-style windows. Since they open and close without protruding, horizontal sliders are an excellent choice for rooms facing walkways, porches or patios. Horizontal sliders are a favorite for contemporary style homes and are also popular for satisfying bedroom egress requirements. In a single slider, one sash slides to open. In a double slider, both sashes open. Double sliders are great for providing air circulation, particularly if there is only one window in the room.</p>
-
-                                    <p>Our premium sliding doors provides a visual presentation that your friends and family will appreciate. It’s more than an entrance, it’s a statement of who you are. Our doors are the perfect complement to your home’s individuality and the design décor you’re creating.</p>
-
-                                    <p>The door panels are specially designed to allow for maximum viewing area, and strength to withstand daily use. We offer dependable security, high durability and easy operation.</p>
-
-                                   
+                                    When it comes to Anodising, you can put your trust in Crystal Industries as we have a vast experience in Anodising Aluminium Components for the last 15 Years and counting!</p>
 
                                 </div> 
 
@@ -298,7 +291,7 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2017 Crystal Industries</p>
+                    <p>Copyright © 2020 Crystal Industries</p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
