--- a/solutions.html
+++ b/solutions.html
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="row">
             <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/solution/anodising.jpg" alt="Awesome Image">
@@ -127,7 +127,7 @@
             </div>
             <!--End single service item-->
             <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/solution/powder.jpg" alt="Awesome Image">
@@ -156,7 +156,7 @@
 
 
                <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/solution/sliding-doors-windows.jpg" alt="Awesome Image">
@@ -182,6 +182,33 @@
                 </div>
             </div>
             <!--End single service item--> 
+
+                           <!--Start single service item-->
+            <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="single-service-item">
+                    <div class="img-holder">
+                        <img src="img/solution/solar-module-frame.jpg" alt="Awesome Image">
+                        <div class="overlay">
+                            <div class="box">
+                                <div class="content">
+                                    <a class="thm-btn yellow-bg" href="solar-module-frame.html">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-holder">
+                        <div class="icon">
+                             <span>
+                                <img src="img/resources/window.png"></img>
+                            </span> 
+                        </div>
+                        <div class="text">
+                            <h3>Solar Module Frame</h3>
+                            <p>Providing Premium Quality Anodised Solar Module Frames to various Customers throughout India.</p>
+                        </div>
+                    </div>    
+                </div>
+            </div>
 
 
         </div>
@@ -323,7 +350,7 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2017 Crystal Industries</p>
+                    <p>Copyright © 2020 Crystal Industries</p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
