--- a/index.html
+++ b/index.html
@@ -496,73 +496,17 @@
 
 
 
-<!--Start google map area-->
-<section class="google-map-area">
-    <div 
-      class="google-map" 
-      id="home-google-map" 
-      data-map-lat="15.531594" 
-      data-map-lng="73.750" 
-      data-map-title="Bicholim, Goa, India"
-      data-map-zoom="12"
-      >
-     </div>
-     <div class="container">
-         <div class="row">
-             <div class="col-md-6 col-sm-8">
-                 <div class="send-message">
-                    <div class="sec-title">
-                        <p>Get In Touch</p>
-                        <h1>Send us a Message </h1>    
-                    </div>
-                    <form  name="contactusform" class="contact-form" method="GET">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="input-field">
-                                            <input type="text" name="name" placeholder="Your Name*">
-                                        </div>    
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="input-field">
-                                            <input type="text" name="mail" placeholder="Email Address*">
-                                        </div>    
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="input-field">
-                                            <input type="text" name="phnumber" placeholder="Phone Num">
-                                        </div>      
-                                    </div>
-                                    <div class="col-md-6">
-                                        <select name="selectmenu" class="selectmenu">
-                                            <option selected="selected">Choose Solution</option>
-                                            <option>Powder Coating</option>
-                                            <option>Anodising</option>
-                                            <option>Sliding Doors & Windows</option>
-                                            <option>Other</option>
-                                        </select>    
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <textarea name="message" placeholder="Write Your Needs..."></textarea>
-                            </div>
-                            <div class="col-md-12">
-                                <button onclick="sendMail(); return false" class="thm-btn yellow-bg" type="submit">Submit Now</button>
-                            </div>
-                        </div> 
-                    </form> 
-                 </div>
-             </div>
-         </div>
-     </div>
+<!--Start our team area--> 
+<section class="our-team-area">
+    <div class="container">
+       <div data-tf-widget="tSPaRzTV" data-tf-hide-headers style="width:400px;height:400px;"></div><script src="assets/typeformlocal.js"></script>
+    </div>    
 </section>
-<!--End google map area-->      
+<!--End our team area-->
+   
+
+                
+
   
 <!--Start footer area-->  
 <footer class="footer-area">
@@ -754,13 +698,12 @@
 <script src="assets/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
 <script src="assets/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
 <script src="assets/revolution/js/extensions/revolution.extension.video.min.js"></script>
-
+<script src="assets/typeformlocal.js"></script>
 
 
 <!-- thm custom script -->
 <script src="js/custom.js"></script>
 <script src="js/email.js"></script>
-
 <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script type="text/javascript">
    (function(){
