--- a/index.html
+++ b/index.html
@@ -499,7 +499,13 @@
 <!--Start our team area--> 
 <section class="our-team-area">
     <div class="container">
-       <div data-tf-widget="tSPaRzTV" data-tf-hide-headers style="width:400px;height:400px;"></div><script src="assets/typeformlocal.js"></script>
+
+
+<div data-tf-widget="tSPaRzTV"></div>
+<script src="//embed.typeform.com/next/embed.js"></script>
+
+
+
     </div>    
 </section>
 <!--End our team area-->
